# yoke

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  initial-prompt.md  skills-lock.json
.agents/skills/claude-md/: SKILL.md  checklist.md  patterns.md  reference.md
.agents/skills/readme/: SKILL.md  checklist.md  formats.md  reference.md
.agents/skills/rust-dev/: SKILL.md  api-guidelines.md  checklist.md  patterns.md  testing.md
.agents/skills/skill-dev/: SKILL.md  checklist.md  patterns.md  reference.md
.claude/skills/: claude-md  rust-dev  skill-dev
src/: config.rs  git.rs  knowledge.rs  lib.rs  main.rs  output.rs  state.rs  template.rs
src/claude/: mod.rs  process.rs  stream.rs  types.rs
src/cli/: discover.rs  init.rs  knowledge.rs  list.rs  mod.rs  new.rs  plan.rs  run.rs  spec.rs  status.rs
src/intent/: migrate.rs  mod.rs  store.rs
src/prompts/: classify.md  code_review.md  discover_product.md  discover_review.md  discover_technical.md  execution.md  format_execution_summary.md  format_handoff.md  format_phase_spec.md  format_plan.md  format_product_spec.md  format_research.md  format_spec_amendment.md  format_spec_extract.md  format_technical_spec.md  handoff.md  knowledge_update.md  mod.rs  phase_plan_generate.md  plan_generate.md  plan_review.md  research.md  review_common.md  spec_amend.md  spec_extract.md  spec_product.md  spec_review.md  spec_technical.md  system.md
src/workflow/: classify.rs  cleanup.rs  context.rs  mod.rs  phase.rs  pipeline.rs  plan.rs  review.rs  spec.rs
